Fixes shapes showing behind badge features.

--- a/src/badge_templates/berlin-2022/shared/styles/styles_1.less
+++ b/src/badge_templates/berlin-2022/shared/styles/styles_1.less
@@ -81,13 +81,17 @@
 .features {
 		position: absolute;
 		width: 100%;
-		bottom: 35px;
-		padding: 0 2mm;
+		bottom: 31px;
+		padding: 0 11px;
 		display: flex;
-		justify-content: space-evenly;
+		justify-content: center;
 		img {
-			height: 70px !important;
-			width: 70px;
+			height: 72px !important;
+			width: 72px;
+			margin-left: 10px;
+			&:nth-of-type(1) {
+				margin-left: 0px;
+			}
 		}
 }
 
